--- a/src/components/listItem/ListItem.module.scss
+++ b/src/components/listItem/ListItem.module.scss
@@ -1,4 +1,93 @@
 .list_item {
-    width: 25rem;
+  max-width: 50rem;
+  width: 100%;
+  display: grid;
+  padding: 1rem;
+  border: 1px solid #3a32b3;
+  border-radius: 10px;
+  grid-template-rows: 0.5fr 0.5fr;
+  row-gap: 1rem;
+
+  .left_side {
+    display: flex;
+    justify-content: center;
+
+    > img {
+      max-width: 50%;
+    }
+  }
+
+  .right_side {
     width: 100%;
+    display: grid;
+    grid-template-rows: 3rem 3rem 0.5fr;
+
+    .anime_item_title {
+      text-align: center;
+      font-size: 1.4rem;
+      font-weight: 600;
+      color: #3f51b5;
+      cursor: pointer;
+    }
+
+    > .anime_item_extra {
+      width: 100%;
+      display: flex;
+      align-items: center;
+
+      div + div {
+          margin-left: 0.8rem;
+      }
+
+      > div {
+        display: inline-block;
+
+        > span:last-child {
+            font-weight: 600;
+        }
+      }
+    }
+  }
+  
+  + .list_item {
+      margin-top: 2rem;
+  }
+
+  .clamp_button {
+    text-decoration: underline;
+    color: blue;
+    cursor: pointer;
+  }
+
+  .clamp {
+    -webkit-line-clamp: 6;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    overflow-wrap: break-word;
+  }
+}
+
+@media screen and (min-width: 481px) {
+  .list_item {
+    grid-template-columns: 1fr 2fr;
+    grid-template-rows: unset;
+    column-gap: 1rem;
+
+    .left_side {
+      min-width: 14rem;
+      margin-right: 2rem;
+      display: flex;
+
+      > img {
+          max-width: 100%;
+        }
+    }
+
+    .clamp {
+      -webkit-line-clamp: 10;
+    }
+
+  }
 }
