--- a/src/components/layout/AnimeDetails/AnimeDetails.module.scss
+++ b/src/components/layout/AnimeDetails/AnimeDetails.module.scss
@@ -1,3 +1,29 @@
 .anime_details {
   display: flex;
+  justify-content: center;
+  width: 40rem;
+  max-width: 80%;
+  margin: 0 auto;
+
+  .container {
+    display: grid;
+    grid-template-columns: 0.5fr 1fr;
+    column-gap: 1rem;
+
+    div:first-child {
+      img {
+        width: 200px;
+        height: fit-content;
+      }
+    }
+
+    div:last-child {
+      .anime_title {
+         h2 {
+          text-transform: capitalize;
+          font-weight: 700;
+         }
+      }
+    }
+  }
 }
