--- a/src/components/listItem/ListItem.module.scss
+++ b/src/components/listItem/ListItem.module.scss
@@ -3,10 +3,11 @@
   width: 100%;
   display: grid;
   padding: 1rem;
-  border: 1px solid #3a32b3;
   border-radius: 10px;
   grid-template-rows: 0.5fr 0.5fr;
   row-gap: 1rem;
+  background-color: #fff;
+  box-shadow: 0px 2px 6px rgba(51, 51, 51, 0.12);
 
   .left_side {
     display: flex;
