--- a/src/components/layout/AnimeDetails/AnimeDetails.module.scss
+++ b/src/components/layout/AnimeDetails/AnimeDetails.module.scss
@@ -52,6 +52,10 @@
           .info_description {
             font-size: 15px;
           }
+
+          > div:last-child {
+            margin-left: 0.3rem;
+          }
         }
       }
     }
